package com.cesar.school.fds2.raycharge.autenticacao.domain.usuario;

public enum TipoUsuario {
    MOTORISTA,
    FORNECEDOR
}